Fix some code smells (#1007)